--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "async": "~1.2.1",
-    "connect-mongo": "~0.8.1",
+    "async": "^1.2.1",
+    "connect-mongo": "^0.8.1",
     "dotenv": "1.1.0",
-    "keystone": "~0.3.16",
-    "underscore": "~1.8.3"
+    "keystone": "^0.3.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-jshint": "~1.11.0",
-    "jshint-stylish": "~2.0.0",
-    "gulp-watch": "~4.2.4"
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.0",
+    "jshint-stylish": "^2.0.0",
+    "gulp-watch": "^4.2.4"
   },
   "engines": {
-    "node": ">=0.12.11",
+    "node": ">=5.6.0",
     "npm": ">=1.3.14"
   },
   "scripts": {
